clusters/cluster/homeautomation/zigbee2mqtt/zigbee2mqtt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: zigbee2mqtt
  name: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        - name: zigbee2mqtt
          image: 1.37.0 # {"$imagepolicy": "flux-system:zigbee2mqtt:tag"}
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            # - name: zigbee2mqtt-data
            #   mountPath: /data
            - name: zigbee2mqtt-config
              mountPath: /app/configuration.yaml
              subPath: configuration.yaml
            - name: ttyusb
              mountPath: /dev/ttyUSB0
      volumes:
        # - name: zigbee2mqtt-data
        #   persistentVolumeClaim:
        #     claimName: zigbee2mqtt-data
        - name: ttyusb
          hostPath:
            path: /dev/ttyUSB0
        - name: zigbee2mqtt-config
          configMap:
            name: zigbee2mqtt-config
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: default
  labels:
    app: zigbee2mqtt
spec:
  selector:
    app: zigbee2mqtt
  ports:
  - name: zigbee2mqtt
    port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt-ingress
  namespace: default
spec:
  ingressClassName: internal-nginx
  #tls:
  #- hosts:
  #  - "zigbee2mqtt.tallflix.ca"
  #  secretName: tls-secret
  rules:
  - host: zigbee2mqtt.tallflix.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zigbee2mqtt
            port:
              number: 8080
